# pypi-package-cookie

./: .gitignore  .pre-commit-config.yaml  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .editorconfig  .pre-commit-config.yaml  README.md  cli.py  noxfile.py  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.project_slug}}.py
