[tool.poetry]
name = "pypi-package-template"
version = "0.1.0"
description = ""
authors = ["Minato <82735346+minato-ellie@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pypi_package_template"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
nox = "^2022.11.21"
cookiecutter = "^2.1.1"
pytest-cookies = "^0.6.1"
alabaster = "^0.7.13"
pdoc = "^13.0.0"
yapf = "^0.32.0"
flake8 = "^6.0.0"
coverage = "^7.2.1"
pre-commit = "^3.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
