[tool.poetry]
name = "pypi-package-template"
version = "0.1.0"
description = ""
authors = ["Minato <82735346+minato-ellie@users.noreply.github.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "pypi_package_template"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.286"
pdoc = "^14.0.0"
black = "^23.7.0"
pre-commit = "^3.3.3"
pytest = "^7.4.0"
mypy = "^1.5.1"
isort = "^5.12.0"
nox = "^2023.4.22"


[tool.poetry.group.test.dependencies]
nox = "^2023.4.22"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
